# YandexInternTestTaskComputerVision

./: AdaBoost.cpp  AdaBoost.h  CMakeLists.txt  Feature.cpp  Feature.h  MessageException.cpp  MessageException.h  Picture.cpp  Picture.h  Sample.cpp  Sample.h  SampleContainer.cpp  SampleContainer.h  Scorer.cpp  Scorer.h  Utils.cpp  Utils.h  main.cpp
data/16x16/: samples00.vec
data/20x20/: samples00.vec
data/24x24/: samples00.vec
